--- a/exp_link.html
+++ b/exp_link.html
@@ -16,11 +16,17 @@
             text-align: center;
         }
         .link-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 20px;
-        }
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    hr {
+        width: 100%;
+        flex-basis: 100%;
+        margin: 20px 0; /* Add vertical spacing */
+    }
         .link-container a {
             text-decoration: none;
             background-color: #E03A3E;
