--- a/exp_link.html
+++ b/exp_link.html
@@ -23,9 +23,9 @@
     }
 
     hr {
-        width: 100%;
-        flex-basis: 100%;
-        margin: 20px 0; /* Add vertical spacing */
+         width: 95%; /* Adjust this value to control the width */
+         border: 4px solid black; /* 4x thickness, black color */
+         margin: 40px auto; /* Center the line and add vertical margin */
     }
         .link-container a {
             text-decoration: none;
