--- a/exp_link.html
+++ b/exp_link.html
@@ -16,17 +16,17 @@
             text-align: center;
         }
         .link-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-top: 20px;
-    }
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
+        }
 
-    hr {
-         width: 95%; /* Adjust this value to control the width */
-         border: 10px solid black; /* 4x thickness, black color */
-         margin: 40px auto; /* Center the line and add vertical margin */
-    }
+        hr {
+            width: 95%; /* Adjust this value to control the width */
+            border: 10px solid black; /* 4x thickness, black color */
+            margin: 40px auto; /* Center the line and add vertical margin */
+        }
         .link-container a {
             text-decoration: none;
             background-color: #E03A3E;
@@ -93,6 +93,48 @@
             }
         }
     </style>
+    <script>
+        // JavaScript code to handle link color changes and local storage
+        document.addEventListener('DOMContentLoaded', function() {
+            const experimentLinks = document.querySelectorAll('.experiment-link');
+            const userID = localStorage.getItem('participantId'); // Get the stored ID
+
+            // Function to load and apply progress
+            function loadProgress() {
+                if (userID) {
+                const completedExperiments = JSON.parse(localStorage.getItem(`completedExperiments_${userID}`)) ||;
+
+                experimentLinks.forEach(link => {
+                    const experimentId = link.getAttribute('data-experiment-id');
+                    if (completedExperiments.includes(experimentId)) {
+                        link.style.backgroundColor = 'white'; // Change background to white
+                        link.style.color = 'black'; // Change text color to black
+                    }
+                });
+                }
+            }
+
+            // Attach event listeners to links
+            experimentLinks.forEach(link => {
+                link.addEventListener('click', function(event) {
+                    const experimentId = this.getAttribute('data-experiment-id');
+                    let completedExperiments = JSON.parse(localStorage.getItem(`completedExperiments_${userID}`)) ||;
+
+                    if (!completedExperiments.includes(experimentId)) {
+                        completedExperiments.push(experimentId);
+                        localStorage.setItem(`completedExperiments_${userID}`, JSON.stringify(completedExperiments));
+
+                        // Immediately change the link's appearance
+                        this.style.backgroundColor = 'white';
+                        this.style.color = 'black';
+                    }
+                });
+            });
+
+            // Load progress on page load
+            loadProgress();
+        });
+    </script>
 </head>
 <body> <script>
         if (typeof window.chrome === 'undefined' || navigator.userAgent.includes('Edg')) {
