--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         .link-container a:hover {
             background-color: #C0292D;
         }
+        #proceedButton {
+            padding: 15px 30px;
+            margin-top: 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            display: none; /* Initially hide the button */
+        }
     </style>
 </head>
 <body>
@@ -36,14 +47,20 @@
         <a href="https://umdsurvey.umd.edu/jfe/form/SV_01wrWtOJkhbDnBY" target="_blank">Consent for People with Aphasia</a>
         <a href="https://umdsurvey.umd.edu/jfe/form/SV_6m0vii6WfY04Zq6" target="_blank">Consent for Neurologically Healthy Participants</a>
     </div>
+    <button id="proceedButton">Proceed to Study</button>
 
     <script>
-        // Transition to id_entry.html after a link is clicked
-        document.querySelectorAll('.link-container a').forEach(link => {
-            link.addEventListener('click', function(event) {
-                // Remove the following line to prevent immediate redirection
-                // window.location.href = 'id_entry.html';
+        const proceedButton = document.getElementById('proceedButton');
+        const consentLinks = document.querySelectorAll('.link-container a');
+
+        consentLinks.forEach(link => {
+            link.addEventListener('click', function() {
+                proceedButton.style.display = 'block'; // Show the button
             });
+        });
+
+        proceedButton.addEventListener('click', function() {
+            window.location.href = 'id_entry.html';
         });
     </script>
 </body>
