--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 50px;
+            padding: 20px; /* Reduced padding */
+        }
+        .link-container {
+            width: 80%; /* Limit width of container */
+            margin: 20vh auto; /* Center and move lower */
+            text-align: center; /* Center the links */
         }
         .link-container a {
             text-decoration: none;
@@ -36,7 +41,7 @@
             border-radius: 5px;
             font-size: 18px;
             cursor: pointer;
-            display: none; /* Initially hide the button */
+            display: none;
         }
     </style>
 </head>
@@ -55,7 +60,7 @@
 
         consentLinks.forEach(link => {
             link.addEventListener('click', function() {
-                proceedButton.style.display = 'block'; // Show the button
+                proceedButton.style.display = 'block';
             });
         });
 
