--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px; /* Reduced padding */
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack elements vertically */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            min-height: 100vh; /* Ensure full viewport height */
+            margin: 0; /* Remove default body margin */
         }
         .link-container {
-            width: 80%; /* Limit width of container */
-            margin: 20vh auto; /* Center and move lower */
-            text-align: center; /* Center the links */
+            width: 80%;
+            text-align: center;
+            background-color: #E03A3E;
+            padding: 10px;
+            border-radius: 4px;
         }
         .link-container a {
             text-decoration: none;
@@ -42,6 +48,9 @@
             font-size: 18px;
             cursor: pointer;
             display: none;
+        }
+        h1, h2 {
+            text-align: center; /* Center the headings */
         }
     </style>
 </head>
