--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack elements vertically */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            min-height: 100vh; /* Ensure full viewport height */
+            margin: 0; /* Remove default body margin */
         }
         .link-container {
-            width: 80%;
-            text-align: center;
-            background-color: #E03A3E;
-            padding: 10px;
-            border-radius: 4px;
-            display: flex; /* Enable flexbox for links */
-            justify-content: center; /* Space links evenly */
-            flex-wrap: wrap; /* Allow links to wrap on smaller screens */
+            width: 80%; /* Limit width of container */
+            margin: 20vh auto; /* Center and move lower */
+            text-align: center; /* Center the links */
         }
         .link-container a {
             text-decoration: none;
@@ -33,6 +28,8 @@
             border-radius: 4px;
             font-size: 16px;
             transition: background-color 0.3s ease;
+            display: inline-block;
+            width: calc(50% - 20px);
             box-sizing: border-box;
             text-align: center;
         }
@@ -42,7 +39,7 @@
         #proceedButton {
             padding: 15px 30px;
             margin-top: 20px;
-            background-color: #E03A3E; /* Updated button color */
+            background-color: #E03A3E; /* Updated button color to red */
             color: white;
             border: none;
             border-radius: 5px;
@@ -51,7 +48,7 @@
             display: none;
         }
         h1, h2 {
-            text-align: center;
+            text-align: center; /* Center the headings */
         }
     </style>
 </head>
