--- a/study_links.html
+++ b/study_links.html
@@ -152,7 +152,7 @@
             // Create header dynamically
             const header = document.createElement('div');
             header.className = 'header';
-            header.innerHTML = `<h1>Experimental Links</h1><p>Please proceed to the tasks as directed and do not move ahead.</p>`;
+            header.innerHTML = `<h1>Study Links</h1><p>Please proceed to the tasks as directed and do not move ahead.</p>`;
             document.body.appendChild(header);
 
             // Create link container dynamically
