--- a/exp_link.html
+++ b/exp_link.html
@@ -182,7 +182,7 @@
             const exp2bLink = createExperimentLink("Reading Aloud", "https://farm.pcibex.net/r/qERGTN/experiment.html?test=true", storedId);
             experimentLinksDiv.appendChild(exp2bLink);
             
-            const exp3aLink = createExperimentLink("Primed Word Production", "https://farm.pcibex.net/r/jPqKCm/experiment.html?test=true", storedId);
+            const exp3aLink = createExperimentLink("Primed Word Production", "https://farm.pcibex.net/r/KZqXsU/experiment.html?test=true", storedId);
             experimentLinksDiv.appendChild(exp3aLink);
             
             experimentLinksDiv.appendChild(document.createElement('hr'));
