--- a/exp_link.html
+++ b/exp_link.html
@@ -193,10 +193,10 @@
 
             experimentLinksDiv.appendChild(document.createElement('hr'));
 
-            const exp6aLink = createExperimentLink("Noun Naming", "https://farm.pcibex.net/p/SBmUWj/", storedId);
+            const exp6aLink = createExperimentLink("Object Naming", "https://farm.pcibex.net/p/SBmUWj/", storedId);
             experimentLinksDiv.appendChild(exp6aLink);
 
-            const exp5aLink = createExperimentLink("Verb Naming", "https://farm.pcibex.net/p/WDphJN/", storedId);
+            const exp5aLink = createExperimentLink("Action Naming", "https://farm.pcibex.net/p/WDphJN/", storedId);
             experimentLinksDiv.appendChild(exp5aLink);
 
             experimentLinksDiv.appendChild(document.createElement('hr'));
@@ -211,10 +211,10 @@
 
             experimentLinksDiv.appendChild(document.createElement('hr'));
 
-            const exp6bLink = createExperimentLink("(Noun) Picture-Word Verification", "https://farm.pcibex.net/p/RMTEOV/", storedId);
+            const exp6bLink = createExperimentLink("(Object) Picture-Word Verification", "https://farm.pcibex.net/p/RMTEOV/", storedId);
             experimentLinksDiv.appendChild(exp6bLink);
 
-            const exp5bLink = createExperimentLink("(Verb) Picture-Word Verification", "https://farm.pcibex.net/p/XFjnFN/", storedId);
+            const exp5bLink = createExperimentLink("(Action) Picture-Word Verification", "https://farm.pcibex.net/p/XFjnFN/", storedId);
             experimentLinksDiv.appendChild(exp5bLink);
 
             const exp2aLink = createExperimentLink("Primed Lexical Decision", "https://farm.pcibex.net/p/OnDfAd/", storedId);
@@ -228,7 +228,7 @@
             const exp6cLink = createExperimentLink("Object Repetition", "https://farm.pcibex.net/p/xGdlGF/", storedId);
             experimentLinksDiv.appendChild(exp6cLink);
 
-            const exp5cLink = createExperimentLink("Verb Repetition", "https://farm.pcibex.net/p/uzpaWn/", storedId);
+            const exp5cLink = createExperimentLink("Action Repetition", "https://farm.pcibex.net/p/uzpaWn/", storedId);
             experimentLinksDiv.appendChild(exp5cLink);
         }
     </script>
