--- a/exp_link.html
+++ b/exp_link.html
@@ -212,7 +212,7 @@
             
             experimentLinksDiv.appendChild(document.createElement('hr'));
 
-            const exp3bLink = createExperimentLink("Word Repetion", "https://docs.google.com/presentation/d/1Yxj7o6hJ7ZW8MfigC_ssW-iTE6AzH0FeELKYPX5QPu4/edit?usp=sharing", storedId);
+            const exp3bLink = createExperimentLink("Word Repetition", "https://docs.google.com/presentation/d/1Yxj7o6hJ7ZW8MfigC_ssW-iTE6AzH0FeELKYPX5QPu4/edit?usp=sharing", storedId);
             experimentLinksDiv.appendChild(exp3bLink);
             
             const exp4aLink = createExperimentLink("PAT Sentence Production", "https://farm.pcibex.net/p/VtFrKH/", storedId);
