--- a/id_entry.html
+++ b/id_entry.html
@@ -88,12 +88,12 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1>Enter Participant ID</h1>
-        <input type="text" id="participant-id" placeholder="Enter Participant ID (e.g., AB123)" pattern="[a-zA-Z]{2}[0-9]{3}" required>
-        <button onclick="redirectToExperiment()">Start Study</button>
-        <p id="error-message" class="error" style="display:none;">Please enter a valid Participant ID (2 letters followed by 3 numbers).</p>
-    </div>
+<div class="container">
+    <h1>Enter Participant ID</h1>
+    <input type="text" id="participant-id" placeholder="Enter Participant ID (e.g., AB123)" pattern="[A-Z]{2}[0-9]{3}" required>
+    <button onclick="redirectToExperiment()">Start Study</button>
+    <p id="error-message" class="error" style="display:none;">Please enter a valid Participant ID (2 uppercase letters followed by 3 numbers).</p>
+</div>
 
     <script>
         if (!navigator.userAgent.includes('Chrome')) {
