--- a/exp_link.html
+++ b/exp_link.html
@@ -186,7 +186,7 @@
             const experimentLinksDiv = document.getElementById('experimentLinks');
 
             const Image_Famil = createExperimentLink("Image Familiarization Slides", "https://docs.google.com/presentation/d/1miPNJ_mq8Gbj8sOW7QKV3DDan-1Kv_Y92NFd_BLV9rs/edit?usp=sharing", storedId);
-            experimentLinksDiv.appendChild(exp3bLink);
+            experimentLinksDiv.appendChild(Image_Famil);
             
             const processingSpeedLink = createExperimentLink("Processing Speed ", "https://farm.pcibex.net/p/fDQIaU/", storedId);
             experimentLinksDiv.appendChild(processingSpeedLink);
