--- a/exp_link.html
+++ b/exp_link.html
@@ -187,6 +187,8 @@
 
             const Image_Famil = createExperimentLink("Image Familiarization Slides", "https://docs.google.com/presentation/d/1miPNJ_mq8Gbj8sOW7QKV3DDan-1Kv_Y92NFd_BLV9rs/edit?usp=sharing", storedId);
             experimentLinksDiv.appendChild(Image_Famil);
+
+            experimentLinksDiv.appendChild(document.createElement('hr'));
             
             const processingSpeedLink = createExperimentLink("Processing Speed ", "https://farm.pcibex.net/p/fDQIaU/", storedId);
             experimentLinksDiv.appendChild(processingSpeedLink);
